--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiohttp==3.8.1
-eth_account==0.5.8
+eth_account==0.8.0
 loguru==0.6.0
 pyuseragents==1.0.5
-web3==5.27.0
+tenacity==8.2.2
+web3==6.0.0
