--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-aiohttp==3.8.1
-eth_account==0.8.0
-loguru==0.6.0
+aiohttp==3.8.5
+aiohttp_proxy==0.1.2
+eth_account==0.9.0
+loguru==0.7.0
 pyuseragents==1.0.5
 tenacity==8.2.2
-web3==6.0.0
+web3==6.6.1
